[package]
name = "abracabra"
version = "0.1.0"
authors = ["Hadrian Węgrzynowski <hadrian@hawski.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adblock = "0.5.4"
chardetng = "0.1.17"
selectors = "0.22.0"
cssparser = "0.27.2"
lol_html = "0.3.1"
